--- a/package.json
+++ b/package.json
@@ -27,5 +27,12 @@
     "webpack": "^1.12.13",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.6.4"
+  },
+  "devDependencies": {
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "node-sass": "^3.13.1",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1"
   }
 }
